<resources>
    <string name="app_name">MTekBilisimTestApp</string>
    <string name="register">REGISTER</string>
    <string name="email">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">PROFILE</string>
    <string name="pharmacy">PHARMACY</string>
    <string name="news">NEWS</string>
    <string name="filter">Filter</string>
    <string name="pharmacy_name">Pharmacy Name</string>
    <string name="update">Update</string>
    <string name="log_out">Log Out</string>
    <string name="news_t_tle">NEWS TİTLE</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="social">Social</string>
    <string name="category">Category</string>
    <string name="yunusbedir_outlook_com_tr">yunusbedir@outlook.com.tr</string>
    <string name="_1234567">1234567</string>
    <string name="user_name">User Name</string>
</resources>
